<resources>
    <string name="app_name">Ferreteria_Mi_Casa</string>

    <string name="lista_carrito">Carrito</string>
    <!--Buttoms Name-->
    <string name="name">FERRETERIA MI CASA</string>
    <string name="Login">Login</string>
    <string name="signin">Sign In</string>
    <string name="newacount">You do not have an account?</string>
    <string name="newacount2"><b>Sing Up</b></string>
    <string name="logout">Log Out</string>

    <!--HINT EDITEXT-->
    <string name="gmail">Email</string>

    <string name="tel">Phone</string>
    <string name="pedido_listo">PEDIDO LISTO</string>
    <string name="gracias">Gracias por tu preferencia</string>
    <string name="ver_mas">VER MAS PRODUCTOS</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="i_forgot_my_password">I forgot my password</string>

</resources>