<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lila">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"/>
    <ImageView
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/configuraciones"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedido_listo"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gracias"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/btnBack"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/ver_mas"
        android:background="@drawable/container_btn"
        android:textColor="@color/black" />
</LinearLayout>